Приложение работает для статических размеров поля

--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
 </head>
 <body>
     <table id="app"></table>
+    <div class="modal" id="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <p>Congratulations! You won!</p>
+        </div>
+    </div>
 </body>
 </html>
