Приложение получает начальные данные динамически. Добавлены комментарии

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <script src="js/main.js" async></script>
 </head>
 <body>
+    <div class="get-started">
+        <p class="rules"></p>
+        <button class="play"></button>
+    </div>
     <table id="app"></table>
     <div class="modal" id="modal">
         <div class="modal-content">
